/*
 * Copyright James Brown 2023
 * Author: James Brown
 */

import io.github.krakowski.jextract.JextractPlugin

plugins {
	id 'java-library'
	id 'io.github.krakowski.jextract' version '0.4.1'
}

plugins.withType(JextractPlugin).configureEach {
	configurations {
		implementation {
			dependencies.removeIf {
				it instanceof FileCollectionDependency
			}
		}
	}
}

version '0.1.0'

repositories {
	mavenCentral()
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(20)
	}
}

test {
	useJUnitPlatform()
}

dependencies {
	implementation('de.skuzzle:semantic-version') {
		version {
			strictly '[2.1.0, 3)'
		}
	}

	testImplementation('org.junit.jupiter:junit-jupiter') {
		version {
			strictly '[5.7.1, 6)'
		}
	}
}

javadoc {
	options {
		source = java.sourceCompatibility.majorVersion
		links += "https://docs.oracle.com/en/java/javase/${java.sourceCompatibility.majorVersion}/docs/api".toString()
	}
}

tasks.withType(JavaCompile).configureEach {
	options.javaModuleVersion = provider { project.version }
	options.encoding = 'UTF-8'
	options.compilerArgs += '--enable-preview'
}

test {
	useJUnitPlatform()
	enableAssertions true
}

jextract {
	header("C:/Program Files/GLFW/glfw-3.4/include/GLFW/glfw3.h") {
		libraries = [ 'glfw3', 'vulkan-1' ]
		targetPackage = 'dev.brownjames.lawu.bindings.glfw'
		definedMacros = [ 'VK_USE_PLATFORM_WIN32_KHR', '_WIN32', 'GLFW_INCLUDE_VULKAN', 'GLFW_DLL' ]
		includes = [
				"${System.env.VULKAN_SDK}/Include",
				'C:\\Program Files\\Microsoft Visual Studio\\2022\\Community\\VC\\Tools\\MSVC\\14.36.32532\\include'
		]

		functions = [
				'glfwVulkanSupported',
				'glfwSetErrorCallback',
		        'glfwInit',
				'glfwGetRequiredInstanceExtensions',
				'glfwTerminate',
				'glfwInitVulkanLoader',
				'glfwGetPhysicalDevicePresentationSupport'
		]

		constants = [
		        'GLFW_TRUE',
				'GLFW_NOT_INITIALIZED'
		]

		typedefs = [
		        'GLFWerrorfun',
		        'uint32_t',
				'PFN_vkGetInstanceProcAddr'
		]
	}

	header("${System.env.VULKAN_SDK}/Include/vulkan/vulkan.h") {
		libraries = [ 'vulkan-1' ]
		targetPackage = 'dev.brownjames.lawu.bindings'
		definedMacros = [ 'VK_USE_PLATFORM_WIN32_KHR', '_WIN32', 'GLFW_INCLUDE_VULKAN', 'GLFW_DLL' ]
		includes = [
				"${System.env.VULKAN_SDK}/Include",
				'C:\\Program Files\\Microsoft Visual Studio\\2022\\Community\\VC\\Tools\\MSVC\\14.36.32532\\include'
		]

		functions = [
				'vkGetInstanceProcAddr',
				'vkGetDeviceProcAddr',
				'vkEnumerateInstanceVersion',
				'vkCreateInstance',
				'vkEnumeratePhysicalDevices',
				'vkDestroyInstance',
				'vkEnumerateInstanceExtensionProperties'
		]

		structs = [
				'VkInstanceCreateInfo',
				'VkApplicationInfo',
				'VkExtensionProperties',
		]

		constants = [
				'VK_STRUCTURE_TYPE_APPLICATION_INFO',
				'VK_STRUCTURE_TYPE_INSTANCE_CREATE_INFO',
				'VK_API_VERSION_1_3',
				'VK_SUCCESS'
		]

		typedefs = [
				'VkInstance',
				'VkPhysicalDevice',
				'uint32_t'
		]
	}
}
